# StellarRouter

./: .wasm-size-baseline.txt  CHANGELOG.md  Cargo.toml  README.md  TODO.md  deny.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  integration-tests-manual.yml  metrics-exporter.yml  metrics-integration-tests.yml  pr-title-validation.yml  security-audit.yml  wasm-size-check.yml
api-server/: Cargo.toml  Dockerfile  README.md
api-server/src/: auth.rs  handlers.rs  lib.rs  main.rs  openapi.rs  poller.rs  rate_limit.rs  replay_protection.rs  rpc.rs  state.rs  tests.rs  types.rs  websocket.rs  xdr.rs
contracts/router-access/src/: lib.rs
contracts/router-common/: Cargo.toml  EVENT_NAMING_CONVENTION.md
contracts/router-common/src/: lib.rs
contracts/router-core/src/: lib.rs
contracts/router-execution/src/: lib.rs
contracts/router-middleware/src/: lib.rs
contracts/router-multicall/src/: lib.rs
contracts/router-quote/: Cargo.toml
contracts/router-quote/src/: lib.rs
contracts/router-registry/src/: lib.rs
contracts/router-timelock/src/: lib.rs
docs/: api-reference.md  architecture.md  sdk.md  security.md  signing-abstraction.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_base64_decode.rs  fuzz_strkey_decode.rs  fuzz_xdr_parse.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: README.md  cross_contract_tests.rs  failure_scenarios.rs  integration_tests.rs  quote_execution_tests.rs
integration-tests/tests/integration/: full_flow_test.rs  testnet_setup.rs
metrics/: Cargo.toml  Dockerfile
metrics/src/: auth.rs  collector.rs  logging.rs  main.rs  metrics.rs  openapi.rs  rate_limit.rs  replay_protection.rs  rpc.rs  server.rs  validation.rs
router-off-chain-common/: Cargo.toml
router-off-chain-common/src/: auth.rs  error.rs  lib.rs  logging.rs  rate_limit.rs  replay_protection.rs  validation.rs
