[workspace]
resolver = "2"
members = [
    "api-server",
    "contracts/router-common",
    "contracts/router-core",
    "contracts/router-registry",
    "contracts/router-access",
    "contracts/router-middleware",
    "contracts/router-timelock",
    "contracts/router-multicall",
    "contracts/router-quote",
    "contracts/router-execution",
    "metrics",
    "router-off-chain-common",
    "integration-tests",
]

[workspace.dependencies]
soroban-sdk = { version = "21.7.6", features = ["alloc"] }
ed25519-dalek = ">=2.0.0, <3"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
